--- a/blog/Issue9/2024-02-27-art.md
+++ b/blog/Issue9/2024-02-27-art.md
@@ -32,13 +32,13 @@ Tianrui Hu
 
 Olusegun Stephen Titus, and Samuel A. Adejube
 
-[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1OCWEoOAF-VoQKotAa67ScH9lvWJ_LW16/view?usp=sharing)
+[Read Online](/articles/issue9/music-performance-of-fela-anikulapo-kuti) [Download](https://drive.google.com/file/d/1OCWEoOAF-VoQKotAa67ScH9lvWJ_LW16/view?usp=sharing)
 
 #### Repositioning Afro-Pop In The Global Music Space: The Contributions Of Davido Music Worldwide (Dmw)’S 30 Billion Gang
 
 Vincent Bamidele Omolaye
 
-[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1kJxxTendwqEejc0iugQRurN4duKLs2aO/view?usp=sharing)
+[Read Online](/articles/issue9/the-contributions-of-davido-music-worldwide) [Download](https://drive.google.com/file/d/1kJxxTendwqEejc0iugQRurN4duKLs2aO/view?usp=sharing)
 
 #### Ethnic-Based Popular Music In Ekiti: A Study Of Elemure Ogunyemi’S Ere Ibile
 
