--- a/issue9/article02/2024-02-24.mdx
+++ b/issue9/article02/2024-02-24.mdx
@@ -65,7 +65,7 @@ export function Name({ author, affil, email }) {
     		<strong>Keywords:</strong>
     		<i>
     			{' '}
-    			Puccini opera, Orientalism, Coloniality, Culture, Performance, Western productions, Chinese productions
+    			puccini opera, orientalism, coloniality, culture, performance, western productions, chinese productions
     		</i>
     	</div>
     </div>
