--- a/issue9/article03/2024-02-22.mdx
+++ b/issue9/article03/2024-02-22.mdx
@@ -1,34 +1,42 @@
 ---
-title: "#3 Music Performance Of Fela Anikulapo Kuti As An Environmental Justice Activist In Nigeria"
-slug:
-description: ""
-authors: []
-tags: []
+title: '#3 Music Performance Of Fela Anikulapo Kuti As An Environmental Justice Activist In Nigeria'
+slug: music-performance-of-fela-anikulapo-kuti
+description: 'Several scholars have documented volumes of studies on Fela Anikulapo Kuti. However, little is known of his digital musical performances related to environmental justice activism till date. This paper therefore examines Fela Anikulapo musical narratives about environment in Nigeria.'
+authors: [titus, sadejube]
+tags:
+  [
+    ecomusicology,
+    nigeria,
+    popular music,
+    fela anikulapo,
+    environmental degradation,
+  ]
 ---
 
 # #3 Music Performance Of Fela Anikulapo Kuti As An Environmental Justice Activist In Nigeria
 
 {/* truncate */}
 
-
-
 ```
-UDC: 792.54.091
-COBISS.SR-ID 139203593 CIP - 6
+UDC: 781.7:929 Кути Ф. A.
+     784.4(669.1)
+     781.7(=423)
+COBISS.SR-ID 139208201 CIP - 10
 
-Received: Nov 26, 2023
-Reviewed: Oct 03, 2023
-Accepted: Oct 08, 2023
+Received: Sept 29, 2023
+Reviewed: Nov 18, 2023
+Accepted: Dec 03, 2023
 
 ```
 
 # #3 Music Performance Of Fela Anikulapo Kuti As An Environmental Justice Activist In Nigeria
 
-export function Name({ author, affil, email }) {
+export function Name({ author, affil1, affil2, email }) {
 	return (
 		<p className='author'>
 			<strong>{author}</strong>
-			<span>{affil}</span>
+			<span>{affil1}</span>
+			{affil2 && <span>{affil2}</span>}
 			<span>{email}</span>
 		</p>
 	);
@@ -36,15 +44,22 @@ export function Name({ author, affil, email }) {
 
 <div className='authors'>
 	<Name
-		author='Tianrui Hu'
-		affil='University of Missouri-Kansas City Conservatory'
-		email='tianruihu01@gmail.com'
+		author='Olusegun Stephen Titus'
+		affil1='Department of Literature, Arts and Media Studies and Centre for Cultural Inquiry
+Konstanz University, Germany'
+		affil2='Obafemi Awolowo University, Ile-Ife, Nigeria'
+		email='olusegun.titus@uni-konstanz.de'
+	/>
+	<Name
+		author='Samuel A. Adejube'
+		affil1='Department of Music, University of Ibadan, Ibadan, Nigeria'
+		email='samadejube@gmail.com'
 	/>
 </div>
 
 <div className='abstract'>
 <div className='citation'>
-<strong>Citation:</strong> Hu, Tianrui. 2024. "Turandot: The Half-Blood Princess."   [_Accelerando: Belgrade Journal of Music and Dance 9:2_](http://localhost:3000/articles/issue8/art)
+<strong>Citation:</strong> Titus, Olusegun S., Samuel A. Adejube. 2024. "Music Performance Of Fela Anikulapo Kuti As An Environmental Justice Activist In Nigeria." [_Accelerando: Belgrade Journal of Music and Dance 9:3_](http://localhost:3000/articles/issue8/art)
 
 </div>
 
@@ -52,13 +67,13 @@ export function Name({ author, affil, email }) {
 	<h4>Abstract</h4>
 	<div>
 
-    	Turandot has long been criticized as artificial, anti-feminist, and most notoriously, Orientalist. The goal of this paper is to show from a survey of its numerous adaptations and transformations worldwide, that it has been proven more productive to treat it as a case for the complexity of the discussion on authenticity of a piece of art in an ever-changing and global world, instead of simply dismissing it as an attestation of Puccini’s inability to produce an authentic montage of a place no different than “a galaxy far, far away” for a Nineteenth century Italian. The paper concludes that over the course of the last two decades, Turandot has transformed from a piece used by the West to appropriate Chinese, to a self-appropriating piece that helped mainly China to assert its “cultural soft power,” and eventually to a vehicle for Chinese domestic audience to understand more about both themselves and the West, and the common thread uniting both cultures: humanity and love.
+    	Several scholars have documented volumes of studies on Fela Anikulapo Kuti. However, little is known of his digital musical performances related to environmental justice activism till date. This paper therefore examines Fela Anikulapo musical narratives about environment in Nigeria. Environmental degradation globally has witnessed a phenomenal catastrophic level, and urgent attention is needed to reduce global warming. The paper engaged ethnographic, musical and textual analysis of Fela Anikulapo selected songs on the environmental pollution in Nigeria. Using Ecomusicology theory, we argue that Fela as a political and environmental justice activist chronicles the phenomenal damages done to the environment by multinational companies and the federal government of Nigeria, and the need to protect Nigeria's resources and the environment. We also argue that noise pollution, as explained by Fela, could cause generational loss of hearing and risk people’s healthy life.
 
     	<div>
     		<strong>Keywords:</strong>
     		<i>
     			{' '}
-    			Puccini opera, Orientalism, Coloniality, Culture, Performance, Western productions, Chinese productions
+    			ecomusicology, nigeria, popular music, fela anikulapo, environmental degradation
     		</i>
     	</div>
     </div>
@@ -69,5 +84,214 @@ export function Name({ author, affil, email }) {
 
 <div className='text'>
 
+## Introduction
+
+Environmental degradation is a global phenomenon, affecting several communities, nations and continents of the world. Africa as a continent, and particularly Nigeria as a nation, are not left out of this tragedy. The challenges facing the average Nigerian could be traced not only to poverty, but also to rural and urban infrastructure, proper maintenance of existential organization, and environmental degradation as seen in water, air and noise pollution, as well as deforestation. Thus, music in Nigeria, just like in other countries in Africa, permeates leisure or hobby. The quotidian relevance of this living art is realized in every aspect of the culture, society, tradition, and from womb to tomb.
+
+Whether traditional, art or popular, Nigerian music is rich in historical and philosophical matters, conveying communality, socio-cultural values, and serving didactic function. The Nigerian’s music is as well panegyric, praising well-deserved people, remembering the feats and triumphs of heroes and heroines, and strengthening the legitimacy of contemporary leaders. Songs in the African community serve a great number of functions than mere entertaining - either it could be songs of praise of good leaders and deeds in the society, or, on the contrary, it could also be songs of insult or correction in the condemnation of the insalubrious deeds of leaders and their followers in the society (Omojola 2012; Adeoye 2013, 11; Okeke 2019, 32).
+
+In correcting and condemning the misdeeds in the society, activist-musicians in the country employed music as a tool and means of identity construction and exploration to engage and formulate ideas, as well as educate the public in crusading and the need to stand up for what is right and morally acceptable within the socio-cultural environment (see Hess 2019, 62). In the same vein, scholars have engaged this discourse, especially referring to Fela Anikulapo Kuti, his son, Femi Kuti, Bisade Ologunde (Lagbaja), as well as some other prominent Nigerian popular musicians who occupied the sound space in the country as activist-musicians in advocating for the rights and privileges of the masses in what is called political activism. Olatunji (2007) exemplifies the usage of Yabis by Fela in addressing the financial corruption and embezzlement of public funds by the military rule, and thereafter examines the political activism of the contemporary Nigerian music artistes. Political activism and music have been an inseparable couple used during the precolonial, colonial, and the postcolonial era in the country. Music, as shown in its role in the society, is used as a means to persuade, mobilize, control, sensitize and advance social causes or cultural phenomena (Adebayo 2017, 56; Okeke 2019, 33).
+
+Thus, music is used as a tool in activism transcending not just political struggle, but also environmental advocacy. Apart from political scuffles done by the elected leader in the country, environmental degradation has also been globally witnessed at a phenomenal catastrophic level both by the leaders and their followers. Hence, there is an urgent need to reduce amicably global warming and return to a safe environment. According to Tailor and Hurley (2015), it is essential for an interaction between the environment and music to bring a viable social stability and musical responsibility. Also, Titus (2019) engages Rob Nixon’s (2011) concept of slow violence and environmentalism of the poor, which is unpinned by the discourse of Pacific Ocean ecomusicology, to examine texts of songs used to explain global social and environmental degradation and oil exploration in the Niger Delta of southern Nigeria. In the same vein, Olorunyomi (2003), Olaniyan (2009), and Olajide (2020) examine Fela’s music, his ‘afrobeat and imagined continent’, ‘rebel arts and politics’, and his ‘personhood and socio-political commitment’ respectively.
+
+This paper, therefore, uses ecomusicology theory as used by Titon (2014) with emphasis on the triangularity of culture, environment and human beings, to examine Fela Anikulapo musical narratives about environment in Nigeria. With the use of ethnography method, musical and textual analysis of selected Fela’s songs on environmental pollution in Nigeria were engaged.
+
+## Ecomusicology, Ecocriticism and Popular Music
+
+Ecomusicology explained by Allen (2011, 391) considers how art reflects, relates to, or relies on nature, which also explains the triangular relationships of music, culture and nature. Several scholars also engage this field of ecomusicology as an interdisciplinary field that combines musicology, ethnomusicology, ecocriticism and environmental activism, as ecocriticism is the study of the relationship between literature and the physical environment. These scholars examine ecomusicology as the study of music, nature and sound in an environmental outlook. They also observe the influences, corollary, and the consequences that allow music, people and place to affect nature and culture (Guy 2009; Allen 2011; Impey 2013). Climate change, global warming, energy alternatives and environmental dilapidation mostly become the discourse of these scholars, as sound-makers, sound producers and consumers are also discussed alongside the environment.
+
+According to Allen and Dawe (2016):
+
+> The terminology of ecomusicology is diverse. Of the three sets of terms music/sound, culture/society and nature/environment, any two sets could suffice in some contexts (e.g., music and nature), but the trio increases and thus, diversifies the possibilities. As such, ecomusicology helps erode those curious and problematic binaries-or, at the least, it helps reveal the values that defend and challenge such binaries. (Ibid., 6-7)
+
+Ecomusicologies considers ways in which indigenous people’s songs and other sonic productions are meant to influence the environment and make it more productive (Titon 2018, 2). Ecomusicology is concerned with the context, content and concept of music about the environs, and also in the music as a caution and awareness to people about their immediate surroundings as it relates to ecocriticism. Adeduntan (2018), uses ecocriticism and ecocinema to examine the imaginary of the Yoruba in the works of Tunde Kelani (a Nigerian film director and cinematographer). He explains that environmentalists and ecocritics increasingly insist that modernist cultures need to learn from, if not revert outright to, indigenous ways. These indigenous ways can be approached culturally, taking Fela as an environmental activist and his music as a cultural tool for environmental ecocriticism.
+
+Popular music, just like traditional music, employs the functionality of the lyrics to project its message. Music has been used from time immemorial to channel a cause or the other apart from entertainment. Varieties of music in Africa are used to express different emotions, feelings and function in the day-to-day activities of the cultural people in the community. According to Akingbe and Onanuga (2018), popular music was used as a protest music for revolt. This becomes subversive music, which is then channeled through social criticism, political activism and anecdotal commentaries. Popular music artistes in the country are creative with the use of different adaptations of the social awareness and consciousness in their musical performances, which can be seen mostly in the lyrics. Olaniyan (op. cit.) explains how Fela’s music was used as a device to reject the oppressive workings of the government, and also challenged the hegemony of the same.
+
+Popular music in Nigeria is wedged up in various inconsistencies and skirmishes, since it is inextricably and inseparably fettered to multifaceted social and historical factors, many of which are changeable and repeatedly create shifting interactions and responses (Oloruntoba-Oju 2020, 50). With the use of the virtual community, national and socio-cultural contents are being disseminated daily through the popular music aural and video production. The role of popular music in the country could now be examined by ecomusicologists in its challenging and alleviating social and environmental injustice, and in stirring the society towards a good habitual use of the environment. In using popular music to seek for social and environmental justice in the country, it is necessary to acknowledge the pros and cons, overtly and covertly value vis-à-vis devalue, some popular music artistes will contribute to the socio-economic environment.
+
+According to Goodman (2011), the social justice approach assumes that social disadvantage is not inherent to particular individuals and groups, because that disadvantage is due to social, political, economic and cultural choices that are socially produced over time. Thus, African societies are inherently culturally lived, from a society to another, enculturation and acculturation, visible and seen across each community. Therefore, ecology just as ecocriticism examines the disadvantages of the ecosystem and the environment as used by the populace or even nature in the society. Ethnomusicologists investigate music production via the lens of ecology, which is now classified as ecomusicology, and this interconnects other fields such as acoustics, sociology and anthropology, bioacoustics, philosophy, cultural and environmental studies (Feisst 2016, 6). Forerunners in ecomusicology, therefore, considered the sustainability of local musical traditions endangered by environmental transformation, degradation and globalisation.
+
+Thus, environmental justice activism using the popular music performances of Fela can be said to be the living state of music as a living art and its relationship with the various cultural contexts around the music. This relationship is essentially the ecological development that occurs between the people and the environment. According to Schippers and Bendrups (2015, 11-12), the new breed of ecomusicologists in this twenty-first century articulated interests in social justice, as well as environmentalism in their work, which go beyond previous imaginings of the influence of nature or landscape in the creation of musical works. Similarly, ecomusicology has generated a lot of insights into the working of music in relation to its creator, performers, educators, communities, cosmologies, values, social and political environments, and its place in media and technology.
+
+However, Allen and Dawe (2016) consider the word ‘ecomusicologies’ rather than one ‘ecomusicology’ because of the vibrant and dynamic field which explores the different interesting and relevant areas. This complexity in ‘ecomusicologies’ is to demonstrate the multifarious meanings that can be connoted and denoted in this field of study which entails the understanding and coming together complex disciplines and inter-disciplines in the humanities, environmental or ecological studies and the sciences. The term ‘ecomusicology’ is not musicological or ethnomusicological; rather, it is both and more… rather, a useful and productive way to conceptualize the field of eco-musicology as ‘ecomusicologies’ (Allen 2017, 93). Ecomusicology helps in examining man's amalgamation with nature, which helps in appreciating the catastrophe of culture that is heading towards environmental crisis.
+
+Human’s actions arising from detachments from culture and nature happen to be one of the factors predicating the environment. These are noticeable in the socio-economic, scientific and technological realms. Since the technological development of popular music could be approached from the recording techniques, concerts, radio, television, concerts, radio, and the ability to sell music both in a virtual and hardware form, ecomusicologists could therefore approach this concept from any or all of the aforementioned institutions.
+
+## Environmental Activism: Fela and his Music
+
+Fela Anikulapo Kuti, formerly Fela Ransome Kuti, was the curator of the Afrobeat music in Nigeria, which he uses to articulate his ideology of black awareness, social and environmental justice and veneration for the human right. Fela uses his music as a tool for the mobilization of people to defend the cause of human rights against the oppression and corruption of the political ruler and military dictators in the country. Different scholars have delved into his music extrapolating the concept of political activism (Olorunyomi 2003; Olaniyan 2009; Salawu 2020). According to Olatunji (2007), Fela incorporated the word ‘Yabis’ (also used as ‘yab’ which is a biting satirical song composed deliberately with the aim to correct an atrocity, misdemeanour or sacrilege committed by individuals or a group of people in the society) to ‘yab’ himself, his band members, audience, as well as the government officials at all levels (from federal to local) and arms (executive, legislature and judiciary), revealing their various corrupt practices and embezzlement of money.
+
+### “Water e no get enemy” [“Water has no enemy"]
+
+However, Fela music encompasses political activism, environmental activism, entertainment and religious exploitation. However, the majority of his music tend towards activism. Environmental educators or activists are saddled with the responsibility to impact information on the state of the environment, what pro-environmental actions to undertake in understanding, and how best to utilise the global ecosystem, to avoid global degradation (Publicover et al, 2017). Fela could be described as a virtuoso musician who juxtaposes himself as an entertainer, humorist (with his satires), social and environmental critic. He employs the use of English, Yoruba and the Nigerian Pidgin in his compositions, which help him and his music to reach a lot of audiences. The Nigerian pidgin has been a widely accepted lingua franca among the music artistes in the country where there exist close to 200 local languages. According to Fasan (2014, 4-5), Fela Anikulapo-Kuti, the creator of Afrobeat music, was among the most notable forerunners who performed in Yoruba and the Nigerian Pidgin in the 1990s. His linguistic predilection went through three discrete stages, which ended with an ideologically inflected Pan-Africanism, that saw him (Fela) singing in broken English, called the Nigerian Pidgin.
+
+As an environmental preacher, Fela advocates for the expediency of some of the environmental natural resources. In his song titled ‘water no get enemy’, translated as ‘water has no enemy’, Fela, with the use of different musical compositional techniques, such as strophic and thorough-composed, instructs his audience on the efficacy and indispensable use of water in the household. However, the different kind of responsorial musical techniques dominate the music of Fela Kuti (_Example 1_).
+
+<div className='poetry'>
+
+```
+To ba fe la we, omi lo ma lo
+If you wan go wash, na water you go use
+To ba fe se be omi lo ma lo
+If you wan cook soup, na water you go use
+To’ri ba gbona omi lero re
+If your head dey hot, na water you go use
+Tomo ba dagba, omi lo ma lo
+If your child dey grow, na water he go use
+If water kill your child, na water you go us
+To mi ba pa omo re, omi na lo ma lo
+Ko sohun to le se, ko ma lo mi o
+Ko sohun to le se, ko ma lo mi o
+Call: Omi o lota o
+Resp: Water e no get enemy
+Call: If you fight am, less you wan die
+Resp: Water e no get enemy
+
+Translation:
+[To bath, one must use water
+To cook, one must use water
+To cook, one must use water
+For headache, one must use water
+For child’s growth, water must be use
+For water reflux, water therapy is the solution
+There is nothing you can do without water
+Water has no enemy
+No one can be an enemy to water]
+```
+
+</div>
+
+<div className='figureBox'>
+<figure className='score'>
+		<img
+			src={require('@site/issue9/article03/ex1.png').default}
+			alt='Example 1. To ba fe la we'
+		/>
+		<figcaption>
+			**Example 1.** To ba fe la we
+		</figcaption>
+	</figure>
+
+</div>
+
+The aesthetic approach to sustainability of nature was used here by Fela to sing the appreciation of water in the community. Challie (2015, 21), in one of his approaches to ecomusicology, encourages sustainability through the concept of aesthetics - the philosophies of beauty - which in turn urges individuals to cogitate aesthetics, sound and music in quest for accomplishing sustainability, and the safeguarding of picturesque landmarks in the society. Water no get enemy is an example of such, in that musical aesthetics, sound, and nature were considered in the composition and production of this music. In addition, the song encapsulates the society and cultural living as well. Each unit of the family was addressed in their appreciation of nature – water. Just like African music is functional – from womb to tomb - this music discourses the nitty gritty of the rite of life, even from infancy to adulthood, connecting aesthetically growth, health, and socio-economic influences.
+
+The musical phrase “omi o l’ota o” reveals the significant role music plays in the sustainability of shaping the people’s perception towards the indispensability of water in the society. Rather than the aesthetic of the music, the appreciation and preservation of the nature–water was emphasized. The musical phrases “if you fight am, less you wan die” (“you cannot live without water”) and “t’o mi ba pa’mo re, omi na lo ma lo” (“when one has a water reflux, water therapy is still the solution”) supported the social and environmental crusading as used by Fela and his music. Thus, the appreciation of water is seen even in a situation where water seems to be the human enemy, the same water is consulted in solving the problem and resolving the challenge. Eventually, nature-water must be valued in order to be utilized and leveraged on the extensive worth of it. Titus (2018, 85) expresses the concern of the Nigerian government at the different levels, which talk about the people’s responsibilities in protecting the waterways as symbols of both intangible and tangible heritages.
+
+### “Perambulator”
+
+Perambulator, literally is a small device with four wheels but no direction. The movement is just within a point. Fela Kuti music titled ‘perambulator’ describe the movement of an individual, organisation, or the government with no direction of purpose vis-à-vis environmental sanitation in the community (_Example 2_). Just like Allen (op. cit., 106) proposes, ecomusicology is no panacea - it cannot automatically provide an ultimate answer to the question of ecological problem or ecocriticism - rather it is just one component in the diverse ecosystem of thought, learning and action, which addresses crises from cultural, political and scientific views. “Perambulator” examines the ecosystem of land pollution and the possibility of providing a lasting solution.
+
+<div className='poetry'>
+
+```
+Call: Perambulator
+Resp: Pe-ram-bu-la-tor…
+Call: He must to turn right, left, move forward, all for nothing
+Call: If you look the man well, all for no profit nor progress, na the same place hin dey go
+Resp: Same same place
+Lagos full full of dirty    
+Town council dey take salary for nothing
+Commissioner wants to do something about it
+He calls meeting for dustbin    
+Resp: No solution
+Call: He makes announcement for radio
+Call: Plenty money dem dey spend    
+Commissioner go for London
+He makes big press statement
+I am going over to London
+To learn how English carry dustbin
+Wetin commissioner no know be say     
+other people dem go there to learn atomic energy
+Our commissioner go to learn dustbin carrying
+You see, him just dey perambulate
+and him still dey
+Resp: Same same place
+
+Translation:
+[Lagos is full of dirty
+Council are not doing what they are paid for
+The commissioner intends a solution
+He calls a stakeholder meeting
+He made announcement on the radio
+Spent a lot of money
+Travelled to London
+Made a laudable press statement
+I am going to London
+To learn how to manage the dirt/refuse
+The commissioner is not aware that
+some travel to London to learn atomic energy
+instead, commissioner chooses refuse disposal
+He is just perambulating
+and he is going nowhere.
+Same place!]
+```
+
+</div>
+
+<div className='figureBox'>
+<figure className='score'>
+		<img
+			src={require('@site/issue9/article03/ex2.png').default}
+			alt='Example 2. Perambulator'
+		/>
+		<figcaption>
+			**Example 2.** Perambulator
+		</figcaption>
+	</figure>
+
+</div>
+
+Fela Kuti, an advocate of environmental justice uses the music, ‘perambulator’ to emphasize on the phenomenal damages done to the environment by individuals and the government institution. The musical phrase Lagos full full of dirty, explains the environmental polluted quandary of the nation’s economic city.  Debris of wastes are scattered and littered on the streets and major roads in Lagos, causing water erosion and air pollution which is hazardous to the health of the people. Fela, as an environmental activist, uses his music to preach the probably solution to the nemesis. The urbanization of Lagos state, just like other urban cities in the country (Ibadan, Onitsha, Kano) has been one of the factors causing environmental degradation. Institution upon institution has been set up to manage and control this situation but all to no avail as corruption has eaten up the whole system from the least to the greatest citizen in the country.
+
+Fela, in his “Perambulator” explains how even the government that is saddled with the responsibility of managing the situation travels to other countries with the motive of learning how to curb or put a stop to environmental pollution, ended up doing nothing. Hence, the word ‘perambulator’ was used to describe them. The environmental challenges facing residents of these urban cities range from environmental and land pollution to air and noise pollution coming from the different religious centers scattered about the country, which use loud audio speakers in their efforts to project their messages to the public. A conceivable solution was suggested in the music when Fela sings about ‘other people dem go there to learn atomic energy’. This could be rephrased as energy recycle system, where reusable materials are recycled for another use. It is a system of refuse disposal, whereby different refuses are separated based on their materials, such as biodegradable and non-biodegradable materials. Such system is to allow the non-biodegradable materials to be recycled, avoid littering the environment, and thus avoid the main causes of the erosion and flooding.
+
+________________
+
+## Conclusion
+
+In this paper we have shown how Fela Anikulapo's music projects environmental sustainability as an activist. We have also examined the place of ecomusicology as a theory that encapsulates the environment, human and culture. Lagos, as the metropolitan city, is overwhelmed with solid wastes, which Fela’s Music addresses here. Music has the capacity to explain global and local environmental challenges, and therefore creates awareness for individuals and communities to help restore environmental sustainability. There is a human part to play, and in fact, from the songs analysis, individuals create the way in which the pollution is generated, that causes pollution and slows violence against Lagos, the fourth largest city in the world.
+
+________________
+
+## References 
+
+<div className='references'>
+
+1. Adebayo, J. O. 2017. "‘Vote not Fight’: Examining music’s role in fostering non-violent elections in Nigeria." _African Journal on Conflict Resolution 17(1): 55-77–77._
+2. Adeduntan, A. 2018. ”Yoruba imaginary in the eco-cinema of Tunde Kelani.” _Green Letters 22(3): 288–300_.
+3. Adeoye, J. O. 2013. “Patriotic music: A tool for sustaining national security in Nigeria.” _Ondo Journal of Science and Science Education 4(1): 9-15_.
+4. Akingbe, N. and P. A. Onanuga. 2018. “Leveraging the Airwaves: Harvesting Ingenuity in Nigerian Hip Hop’s Lyrics.” _Journal of the Musical Arts in Africa 15 (1-2): 19–40_.
+5. Allen, A. S. 2011. “Prospects and problems for ecomusicology in confronting a crisis of culture.” _Journal of the American Musicological Society 62(2): 414-424_.
+6. _____. 2017. “Greening the Curriculum: Beyond a Short Music History in Ecomusicology.” _Journal of Music History Pedagogy 8(1): 91–109_.
+7. Allen, A. S. and K. Dawe. 2016. _Current Directions in Ecomusicology – Music, Culture, Nature_. Edited by Aaron S. Allen and Kevin Dawe. Routledge, Taylor & Francis Group.
+8. Challe, Tiffany. 2015.“Ecomusicology: back to the roots of sound / music and environmental sustainability.” MA Thesis, Graduate Center, City University of New York.
+9. Fasan, R. 2014. “Wetin dey happen? Wazobia, Popular Arts, and Nationhood.” _Journal of African Cultural Studies_.
+10. Feisst, S. 2016. “Music and Ecology.” _Contemporary Music Review 35(3): 293–295._
+11. Goodman, D. J. 2011. _Promoting diversity and social justice: Educating people from privileged groups_. London: Routledge.
+12. Guy, N. 2009. “Flowing down Taiwan’s Tamsui river: Towards an ecomusicology of the environmental imagination.” _Ethnomusicology 53(2): 218-248_.
+13. Hess, J. 2019. ”Singing our own song: Navigating identity politics through activism in music.” _Research Studies in Music Education 41(1): 61–80_.
+14. Impey, A. 2013. ”Songs of Mobility and Belonging: Intervention.” _International Journal of Postcolonial Studies 15(2); 255-271_.
+15. Okeke, R. C. 2019. “Politics, Music and Social Mobilization in Africa: The Nigeria Narrative and Extant Tendencies.” _International Letters of Social and Humanistic Sciences (86): 28–41_.
+16. Olatunji, M. 2007. “Yabis: A Phenomenon in the Contemporary Nigerian Music.” _Journal of Pan African Studies 1(9): 26_.
+17. Olaniyan, T. 2009. _Arrest the Music! Fela and His Rebel Art and Politics_. Ibadan, Nigeria: Bookcraft.
+18. Oloruntoba-Oju, D. 2019.“State power, postmodernist identities and conflict in contemporary Nigerian popular music.” _Journal of the African Literature Association 13(1): 48–63_.
+19. Olorunyomi, S. 2003. _Afrobeat! Fela and the Imagined Continent_. Trenton: Africa World Press.
+20. Omojola, B. 2012. _Yoruba Music in the Twentieth Century: Identity, Agency and Performance Practice_. New York: University of Rochester Press 2012. Bibliog; Index ISBN 978 -1- 58046-409-3
+21. Peters, M. 2020. _Popular Music, Critique and Manic Street Preachers_. Palgrave Macmillan.
+22. Publicover, J. L., T. S. Wright, S. Baur, & P. N. Duinker. 2018. “Music as a tool for environmental education and advocacy: artistic perspectives from musicians of the Playlist for the Planet.” _Environmental Education Research 24(7): 925–936_.
+23. Salawu, O. M. 2020. ”Abàmì Èdá: Personhood and Socio-political Commitment in Fela’s Music.” _Muziki, 1–18_.
+24. Schippers, H. and D. Bendrups. 2015. “Ethnomusicology, Ecology and the Sustainability of Music Cultures.” _The World of Music 4(1): 9-19_.
+25. Taylor, H., and A. Hurley. 2014. “Music and Environment: Registering Contemporary Convergences.” _Journal of Music Research 20(1): 1-18_.
+26. Titon, J. T. 2018. “Ecomusicology and the Problems in Ecology.” _MUSICultures, 45(1/2): 255–264_.
+27. Titus, O. S. 2019. “Ecomusicology, Indigenous Knowledge And Environmental Degradation In Ibadan, Nigeria.” _Journal of International Library of African Music, 72–90_.
+28. ____. 2018. “Musical narratives of oil exploration and sea degradation from the Niger Delta.” In _Monsoon Assemblages, edited by L. Bremner, 91–99_.
+
+</div>
+
+<div className='up'>
+	<a href='#'>![Go to top]('../up.png')</a>
+</div>
 
 </div>
